--- a/Learn.ToDo.Api/Learn.ToDo.Api.csproj
+++ b/Learn.ToDo.Api/Learn.ToDo.Api.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Learn.ToDo.Application\Learn.ToDo.Application.csproj" />
+  </ItemGroup>
+
 </Project>
