Turn from Memory Cashing to Entity Framework core with MSSQL | REST API

--- a/Learn.ToDo.Api/Learn.ToDo.Api.csproj
+++ b/Learn.ToDo.Api/Learn.ToDo.Api.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Learn.ToDo.Application\Learn.ToDo.Application.csproj" />
+    <ProjectReference Include="..\Learn.ToDo.Infrastructure\Learn.ToDo.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
