--- a/Learn.ToDo.Api/Learn.ToDo.Api.csproj
+++ b/Learn.ToDo.Api/Learn.ToDo.Api.csproj
@@ -7,12 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Learn.ToDo.Application\Learn.ToDo.Application.csproj" />
-    <ProjectReference Include="..\Learn.ToDo.Infrastructure\Learn.ToDo.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
